--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@gluestack-ui/themed": "^1.1.73",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
+    "expo-document-picker": "~13.0.3",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.492.0",
     "lucide-react-native": "^0.492.0",
@@ -23,8 +25,8 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0"
   },
