--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "platforms":["ios", "android", "web"],
     "name": "datman-onboarding",
     "slug": "datman-onboarding",
     "version": "1.0.0",
