--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/themed": "^1.1.73",
@@ -22,14 +23,14 @@
     "lucide-react": "^0.492.0",
     "lucide-react-native": "^0.492.0",
     "react": "18.3.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
