--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~52.0.46",
     "expo-document-picker": "~13.0.3",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "7.1.0",
     "lucide-react": "^0.492.0",
     "lucide-react-native": "^0.492.0",
     "react": "18.3.1",
