--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.492.0",
     "lucide-react-native": "^0.492.0",
     "react": "18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.0",
     "react-native": "0.76.9",
