--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/themed": "^1.1.73",
     "@hookform/resolvers": "^5.0.1",
     "@lottiefiles/dotlottie-react": "^0.13.4",
@@ -26,6 +27,7 @@
     "lottie-react-native": "7.1.0",
     "lucide-react": "^0.492.0",
     "lucide-react-native": "^0.492.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "18.3.1",
@@ -36,7 +38,7 @@
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "zod": "^3.24.3"
