Persistent storage done

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@gluestack-ui/themed": "^1.1.73",
     "@hookform/resolvers": "^5.0.1",
     "@lottiefiles/dotlottie-react": "^0.13.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -41,6 +42,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
